getting an api key

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="./node_modules/bootstrap/dist/css/bootstrap.css"
         />
-        <title>Kinopoisk glo</title>
+        <title>Glo Kinopoisk</title>
     </head>
     <body>
         <nav class="navbar">
@@ -28,9 +28,10 @@
                     />
                 </form>
             </div>
-            <div class="container">
-                <div id="movies" class="row"></div>
-            </div>
         </div>
+        <div class="container">
+            <div id="movies" class="row"></div>
+        </div>
+        <script src="./src/index.js"></script>
     </body>
 </html>
