--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <div class="container">
             <div id="movies" class="row"></div>
         </div>
-        <script src="./src/script.js"></script>
+        <script src="./src/script2.js"></script>
     </body>
 </html>
