--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         <title>Glo Kinopoisk</title>
     </head>
     <body>
+        <style>
+            img {
+                max-width: 100%;
+            }
+            .item {
+                margin: 20px 0;
+                text-align: center;
+                font-weight: 700;
+            }
+        </style>
         <nav class="navbar">
             <div class="container">
                 <a href="index.html" class="navbar-brand"> Glo-kinopoisk</a>
