--- a/index.html
+++ b/index.html
@@ -15,10 +15,30 @@
             img {
                 max-width: 100%;
             }
+            .img_poster {
+                height: 360px;
+            }
             .item {
                 margin: 20px 0;
                 text-align: center;
                 font-weight: 700;
+            }
+            .spinner {
+                margin: 20px auto;
+                width: 100px;
+                height: 100px;
+                border: 10px dashed;
+                border-radius: 50%;
+                border-left-color: transparent;
+                border-top-color: #aaa;
+                border-right-color: #555;
+                border-bottom-color: #000;
+                animation: spin 500ms infinite linear;
+            }
+            @keyframes spin {
+                100% {
+                    transform: rotate(360deg);
+                }
             }
         </style>
         <nav class="navbar">
